# company-relationship-manager

./: .my_pgpass  Dockerfile  LICENSE  Pipfile  README.md  TASKS.md  docker-compose.yml  down.sh  pyproject.toml  pytest.ini  sample.env  test.sh  up.sh
crm/companies/: models.py  serializers.py  urls.py  views.py
crm/companies/migrations/: 0001_initial.py  0002_alter_company_options_and_more.py
crm/companies/tests/: test_models.py  test_serializers.py  test_views.py
crm/crm/: settings.py  urls.py
crm/fixtures/: companies.json
